--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,29 +1,29 @@
 <section layout-align="center center" class="navigation-buttons">
 
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('operatorControl')">Operator Control</material-button>
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('alarms')">Alarms</material-button>
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('health')">Health and State</material-button>
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('operatorControl')">Operator Control</md-button>
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('alarms')">Alarms</md-button>
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('health')">Health and State</md-button>
 
 
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('scheduler')">Scheduler</material-button>
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('weather')">Weather</material-button>
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('sensorGraph')">Sensor Graphs</material-button>
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('scheduler')">Scheduler</md-button>
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('weather')">Weather</md-button>
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('sensorGraph')">Sensor Graphs</md-button>
 
-    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('admin')">Admin</material-button>
-    <material-button class="material-button-raised material-button-colored" disabled>Log Reports</material-button>
-    <material-button class="material-button-raised material-button-colored" disabled>Source Catalogues</material-button>
-
-
-    <!--<button class="material-button-colored"></button>-->
-    <!--<button class="material-button-colored"></button>-->
-    <!--<button class="material-button-colored"></button>-->
+    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('admin')">Admin</md-button>
+    <md-button class="md-button-raised md-button-colored" disabled>Log Reports</md-button>
+    <md-button class="md-button-raised md-button-colored" disabled>Source Catalogues</md-button>
 
 
-    <!--<button class="material-button-colored"></button>-->
-    <!--<button class="material-button-colored"></button>-->
-    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
 
-    <!--<button class="material-button-colored"></button>-->
-    <!--<button class="material-button-colored"></button>-->
-    <!--<button class="material-button-colored"></button>-->
+
+    <!--<button class="md-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
+
+    <!--<button class="md-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
+    <!--<button class="md-button-colored"></button>-->
 </section>
